welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: Missing closing brace `}' assumed here
def positionFinale(a:Int, b:Int):Boolean = {
^